Fix broken CSS

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,75 @@ form {
 .font-roboto {
   font-family: 'Roboto' !important;
 }
+
+.footer-left{
+  text-align: left;
+  font-size: 15px;
+  position:absolute;
+  bottom:10px;
+  left:10px
+}
+
+.footer-right{
+  text-align: right;
+  font-size: 15px;
+  position:absolute;
+  bottom:10px;
+  right:10px
+}
+
+@media (max-width:320px)  {
+  .footer-left{
+    text-align: center;
+    position:static;
+  }
+
+  .footer-right{
+    text-align: center;
+    position:static;
+  }
+}
+
+@media (max-width:481px)  {
+  .footer-left{
+    text-align: center;
+    position:static;
+  }
+
+  .footer-right{
+    text-align: center;
+    position:static;
+  }
+}
+
+@media (max-width:641px)  {
+  .footer-left{
+    text-align: center;
+    position:static;
+  }
+
+  .footer-right{
+    text-align: center;
+    position:static;
+  }
+}
+
+@media (max-width:961px)  {
+  .footer-left{
+    text-align: center;
+    position:static;
+  }
+
+  .footer-right{
+    text-align: center;
+    position:static;
+  }
+}
+
+@media (max-width:1025px) {
+  /* big landscape tablets, laptops, and desktops */
+
+}
+@media (max-width:1281px) {
+  /* hi-res laptops and desktops */
+}
